# Ritsu

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
src/: declaration.h  main.c
src/collection/: array.h  list.h
src/hardware/: cursor.c  cursor.h  screen.c  screen.h
src/neural/: recognizer.c  recognizer.h
src/script/lua/: context.c  context.h
src/script/lua/metatable/: image.c  image.h  recognizer.c  recognizer.h
src/script/lua/table/: cursor.c  cursor.h  screen.c  screen.h
src/type/: image.c  image.h  path.c  path.h  point.h  text-block.c  text-block.h
